WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
268640
[WGSL] shader,validation,const_assert,const_assert:* is failing
https://bugs.webkit.org/show_bug.cgi?id=268640
Summary
[WGSL] shader,validation,const_assert,const_assert:* is failing
Tadeu Zagallo
Reported
2024-02-02 10:38:05 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-02-02 10:38:32 PST
<
rdar://problem/122194238
>
Tadeu Zagallo
Comment 2
2024-02-02 10:41:17 PST
Pull request:
https://github.com/WebKit/WebKit/pull/23759
EWS
Comment 3
2024-02-05 06:06:04 PST
Committed
274093@main
(caf4dfc46d78): <
https://commits.webkit.org/274093@main
> Reviewed commits have been landed. Closing PR #23759 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug