[WGSL] shader,validation,const_assert,const_assert:* is failing https://bugs.webkit.org/show_bug.cgi?id=268640 rdar://122194238

Reviewed by Mike Wyrzykowski.

Add support for const_expr statements and top-level declarations.

* Source/WebGPU/WGSL/AST/AST.h:
* Source/WebGPU/WGSL/AST/ASTConstAssert.h: Added.
* Source/WebGPU/WGSL/AST/ASTConstAssertStatement.h: Added.
* Source/WebGPU/WGSL/AST/ASTForward.h:
* Source/WebGPU/WGSL/AST/ASTNode.h:
* Source/WebGPU/WGSL/AST/ASTVisitor.cpp:
(WGSL::AST::Visitor::visit):
* Source/WebGPU/WGSL/AST/ASTVisitor.h:
* Source/WebGPU/WGSL/GlobalSorting.cpp:
(WGSL::Graph::addNode):
(WGSL::Graph::addEdge):
(WGSL::reorder):
* Source/WebGPU/WGSL/Parser.cpp:
(WGSL::Parser<Lexer>::parseDeclaration):
(WGSL::Parser<Lexer>::parseConstAssert):
(WGSL::Parser<Lexer>::parseStatement):
* Source/WebGPU/WGSL/ParserPrivate.h:
* Source/WebGPU/WGSL/TypeCheck.cpp:
(WGSL::TypeChecker::visit):
* Source/WebGPU/WGSL/tests/invalid/const-assert.wgsl: Added.
* Source/WebGPU/WGSL/tests/valid/const-assert.wgsl: Added.
* Source/WebGPU/WebGPU.xcodeproj/project.pbxproj:

Canonical link: https://commits.webkit.org/274093@main