Source/WebGPU/WGSL/ParserPrivate.h
@@ -27,6 +27,7 @@
 
 #include "ASTAttribute.h"
 #include "ASTBuilder.h"
+#include "ASTConstAssert.h"
 #include "ASTExpression.h"
 #include "ASTForward.h"
 #include "ASTFunction.h"
@@ -66,6 +67,7 @@ public:
     Result<void> parseEnableDirective();
     Result<void> parseRequireDirective();
     Result<AST::Declaration::Ref> parseDeclaration();
+    Result<AST::ConstAssert::Ref> parseConstAssert();
     Result<AST::Attribute::List> parseAttributes();
     Result<AST::Attribute::Ref> parseAttribute();
     Result<AST::Structure::Ref> parseStructure(AST::Attribute::List&&);
